# agent-tally

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
agent_tally/: __init__.py  budget.py  cli.py  config.py  dashboard.py  detector.py  display.py  notifier.py  pricing.py  storage.py  ticker.py  wrapper.py
agent_tally.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_budget.py  test_config.py  test_detect_provider.py  test_detector.py  test_edge_cases.py  test_enhanced_edge_cases.py  test_extended.py  test_integration.py  test_new_features.py  test_new_models_pricing.py  test_new_token_patterns.py  test_new_v7.py  test_nightshift_improvements.py  test_notifier.py  test_pricing.py  test_storage.py  test_ticker.py  test_v8_edge_cases.py  test_v9_patterns.py
