[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tally"
version = "0.5.0"
description = "Real-time cost tracking for AI coding agents with budget limits, kill switch, and TUI dashboard."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Hiren Thakore", email = "thakoreh@users.noreply.github.com"}]
keywords = ["ai", "agents", "cost-tracking", "cli", "claude-code", "codex", "openclaw"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
agent-tally = "agent_tally.cli:cli"

[tool.setuptools.packages.find]
include = ["agent_tally*"]

[project.urls]
Homepage = "https://github.com/thakoreh/agent-tally"
Repository = "https://github.com/thakoreh/agent-tally"
Issues = "https://github.com/thakoreh/agent-tally/issues"

[tool.setuptools.package-data]
agent_tally = ["py.typed"]

[options.entry_points]
console_scripts = "agent-tally"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
